# Huginn

./: .gitignore  API.md  ASSEMBLY_ANALYSIS.md  BITBOARD_IMPLEMENTATION_SUMMARY.md  BUILD_GUIDE.md  Benchmarks.txt  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.backup  CMakeLists_simple.txt  CMakeLists_test.txt  CMakePresets.json  CORRECTED_SESSION_SUMMARY.md  DEBUG_ASSERTIONS.md  DECODE_MOVE_REMOVAL.md  EN_PASSANT_VALIDATION.md  EVALUATE_FLOWCHART.md  FEN_GENERATION.md  IMPROVEMENT_5_BITBOARD_ACCELERATION.md  IMPROVEMENT_LOG.md  M499_FIX_SUMMARY.md  MATE_SCORE_INVESTIGATION.md  MINIMAL_ENGINE_REPORT.md  NEXT_STEPS.md  PERFORMANCE_ARCHITECTURE_REVIEW.md  PERFORMANCE_TRACKING.md  PERFT_DEBUG_ANALYSIS.md  POSITION_AND_MOVEGEN_ARCHITECTURE.md  README.md  SESSION_SUMMARY.md  SQATTACKED_IMPLEMENTATION.md  ToDo.md  ULTRA_ENGINE_STATUS.md  VICE_COMPLIANCE_REPORT.md  VICE_PART_105_IMPLEMENTATION.md  VICE_PART_105_VERIFICATION.cpp  a1a2_depth3_reference_test.cpp  a2a3_a7a6_depth4_analysis.cpp  a2a3_depth5_breakdown.cpp  (+386 more)
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
Engine3_src/: hybrid_evaluation.cpp  simple_search.cpp  simple_search.hpp
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  huginn_tests[1]_include.cmake  huginn_tests[1]_tests.cmake
asm_output/: README.md  assembly_analysis.md  attack_detection.s  board120.s  generation_log.txt  move.s  movegen_enhanced.s  position.s
benchmark/: analysis.py  attack_benchmark.cpp  benchmark.py  benchmark_results_20250909_215842.json  benchmark_results_20250909_215917.json  benchmark_results_20250909_220051.json  benchmark_results_20250909_234357.json  benchmark_results_20250909_234420.json  benchmark_results_20250910_000020.json  benchmark_results_20250910_091801.json  benchmark_results_20250910_091822.json  benchmark_results_20250910_100558.json  benchmark_results_20250910_101707.json  benchmark_results_20250910_104607.json  benchmark_results_20250910_104629.json  benchmark_results_20250910_104654.json  benchmark_results_20250910_104856.json  benchmark_results_20250911_092628.json  benchmark_results_20250911_175352.json  benchmark_results_20250911_175439.json  benchmark_results_20250912_214636.json  benchmark_results_20250913_185642.json  benchmark_results_20250913_190247.json  benchmark_results_20250913_202501.json  benchmark_results_20250913_202620.json  benchmark_results_20250913_220555.json  benchmark_results_20250913_223032.json  benchmark_results_20250913_223126.json  benchmark_results_20250914_095155.json  benchmark_results_20250914_100551.json  benchmark_results_20250914_110140.json  benchmark_results_20250914_110220.json  benchmark_results_20250914_111548.json  benchmark_results_20250914_114949.json  benchmark_results_20250914_122941.json  benchmark_results_20250914_191914.json  benchmark_results_20250914_203409.json  compare_results.py  futility_analysis.py  iid_analysis.py  (+5 more)
build_ci/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  huginn_tests  huginn_tests[1]_include.cmake  huginn_tests[1]_tests.cmake  huginn_uci  test_move_decoding
build_release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  huginn  huginn_demo  huginn_tests[1]_include.cmake  huginn_tests[1]_tests.cmake  parallel_benchmark  perft_suite_demo
debug/: alphabeta_no_ordering_test.cpp  alphabeta_with_pv_test.cpp  analyze_game.cpp  analyze_game.py  analyze_mate_position.cpp  arena_equivalent_test.cpp  arena_simple_test.cpp  bishop_debug.cpp  bitboard_state_debug.cpp  compare_kiwipete_implementations.cpp  compare_moves.cpp  compilation_debug.cpp  debug_a2a4.cpp  debug_attack_check.cpp  debug_capture_attacker.cpp  debug_castle_output.txt  debug_e2e4_eval.cpp  debug_en_passant.cpp  debug_enpassant.cpp  debug_kiwipete.cpp  debug_kiwipete_a2a4_perft.cpp  debug_kiwipete_castle.cpp  debug_kiwipete_depth3.cpp  debug_kiwipete_perft.cpp  debug_kiwipete_perft_compare.cpp  debug_kiwipete_simple.cpp  debug_legal_moves.cpp  debug_opening.cpp  debug_perft.cpp  debug_perft_colors.cpp  debug_perft_simple.cpp  debug_pinned_capture.cpp  debug_pseudo_legal.cpp  debug_symmetry.cpp  debug_wac1.cpp  deep_dive_debug.cpp  deep_search_test.cpp  demo_offboard.cpp  development_test.cpp  direct_perft_test.cpp  (+44 more)
demos/: BUILD_SETUP.md  README_repetition_demo.md  asymmetry_investigation.cpp  castling_demo.cpp  center_control_analysis.cpp  critical_position_test.cpp  debug_pawns.cpp  demo_king_lookup.cpp  detailed_eval_analysis.cpp  enhanced_movegen_advanced_test.cpp  enhanced_movegen_demo.cpp  eval_analysis.cpp  f6_penalty_test.cpp  fen_demo.cpp  fixed_mirror_test.cpp  isolated_pawn_demo.cpp  key_square_demo.cpp  king_safety_test.cpp  king_walking_specific_test.cpp  king_walking_test.cpp  mirror_analysis.cpp  mirror_board_demo.cpp  move_selection_test.cpp  no_center_control_test.cpp  opening_analyzer.cpp  opening_move_analysis.cpp  pawn_mask_analysis.cpp  pawn_mask_demo.cpp  pawn_table_comparison.cpp  perft6_huginn.cpp  perft_move_analyzer.cpp  precise_vice_test.cpp  pst_investigation.cpp  repetition_detection_demo.cpp  self_play_tester.cpp  simple_eval_investigation.cpp  simple_pawn_demo.cpp  sq_attacked_demo.cpp  symmetric_openings_test.cpp  symmetry_test.cpp  (+10 more)
docs/: AI_INTEGRATION_GUIDE.md  API.md  ARCHITECTURE.md  BACKLOG-archive-2.0.md  BACKLOG-archive-2.1.md  BACKLOG-archive-2.2.md  BACKLOG.md  BASELINE_LADDER.md  BITBOARD_IMPLEMENTATION.md  BITBOARD_MIGRATION_PLAN.md  BITBOARD_PROGRESS_REPORT.md  BITBOARD_SUCCESS_SUMMARY.md  BUILD_GUIDE.md  CASTLING_VALIDATION.md  CHANGELOG_2.2.md  CHANGELOG_2.3.md  CLAUDE.md  DEBUG_VALIDATION.md  DECODE_MOVE_ANALYSIS.md  DOCUMENTATION_WORKFLOW.md  DOXYGEN_PROGRESS.md  DUAL_ENGINE_ARCHITECTURE.md  DUPLICATE_FUNCTIONS_ANALYSIS.md  ENGINE3_ARCHITECTURE.md  EN_PASSANT_BUG_INVESTIGATION_SUMMARY.md  EN_PASSANT_STATUS.md  EVALUATION_OPTIMIZATION_ANALYSIS.md  EngineX_UML_Architecture.md  GLOBAL_TRANSPOSITION_TABLE_LAZY_SMP.md  (+37 more)
(+860 files in other folders)
